--- a/move_base_msgs_ros1/package.xml
+++ b/move_base_msgs_ros1/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>kabam_msgs</name>
+  <name>move_base_msgs</name>
   <version>0.0.0</version>
   <description>The kabam_msgs package has custom ROS message, service and action interfaces used at KABAM</description>
 
